<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_container"
    app:cardBackgroundColor="@color/colorItemBackground"
    app:cardCornerRadius="@dimen/item_launch_corner_radius"
    android:layout_margin="@dimen/grid_normal"
    app:contentPadding="@dimen/grid_normal"
    app:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mission_patch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@android:drawable/ic_menu_zoom"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/launch_details_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/grid_normal"
            android:layout_marginEnd="@dimen/grid_normal"
            app:layout_constraintEnd_toStartOf="@+id/view_success"
            app:layout_constraintStart_toEndOf="@+id/mission_patch"
            app:layout_constraintTop_toTopOf="parent">

            <prieto.fernando.spacex.presentation.widget.LaunchDetailsView
                android:id="@+id/launch_details_mission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/launches_item_mission" />

            <prieto.fernando.spacex.presentation.widget.LaunchDetailsView
                android:id="@+id/launch_details_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/launch_details_mission"
                app:title="@string/launches_item_date_time" />

            <prieto.fernando.spacex.presentation.widget.LaunchDetailsView
                android:id="@+id/launch_details_name_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/launch_details_date_time"
                app:title="@string/launches_item_rocket" />

            <prieto.fernando.spacex.presentation.widget.LaunchDetailsView
                android:id="@+id/launch_details_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/launch_details_name_time"
                app:title="@string/launches_item_days" />
        </LinearLayout>

        <ImageView
            android:id="@+id/view_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@android:drawable/ic_menu_zoom"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>