<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/launches_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_normal"
        android:layout_marginTop="@dimen/grid_xlarge"
        android:fontFamily="@font/space_grotesk_bold"
        android:text="@string/launches_title"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/letter_xlarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/launches_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_filter"
        tools:visibility="visible"
        android:layoutAnimation="@anim/layout_animation"
        android:layout_marginEnd="@dimen/grid_semi_large"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launches_title" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/launches_animation"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launches_title"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/rocket_launched" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/launches_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_semi_large"
        android:layoutAnimation="@anim/layout_animation"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launches_filter"
        tools:listitem="@layout/item_launch" />

    <TextView
        android:id="@+id/launches_error_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_small"
        android:layout_marginTop="@dimen/grid_semi_large"
        android:layout_marginBottom="@dimen/grid_large"
        android:fontFamily="@font/space_grotesk_light"
        android:gravity="center"
        android:text="@string/header_error_description"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/letter_large"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/launches_error_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/launches_error_animation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launches_title"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/error_conexion"
        tools:visibility="visible" />

    <com.qhutch.bottomsheetlayout.BottomSheetLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorBottomTrayBackground"
        android:paddingTop="@dimen/grid_xlarge"
        android:paddingBottom="@dimen/grid_xlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/youtube_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/grid_normal"
                android:fontFamily="@font/space_grotesk_semibold"
                android:text="@string/bottom_sheet_youtube"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/letter_large"
                app:drawableStartCompat="@drawable/ic_youtube"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/separator"
                android:layout_width="1dp"
                android:layout_height="@dimen/grid_large"
                android:background="@color/textColorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/wikipedia_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/grid_normal"
                android:fontFamily="@font/space_grotesk_semibold"
                android:text="@string/bottom_sheet_wikipedia"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/letter_large"
                app:drawableStartCompat="@drawable/ic_wikipedia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/separator"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.qhutch.bottomsheetlayout.BottomSheetLayout>
</androidx.constraintlayout.widget.ConstraintLayout>